dark mode button spelling fix

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -569,7 +569,7 @@ button:hover {
   margin-top: 20px;
   padding: 0px;
 }
-.dark-mod-button:hover {
+.dark-mode-button:hover {
   background-color: #007BFF;
 }
 /* The switch - the box around the slider */
